--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
 html { box-sizing: border-box; }
 *, ::after, ::before { box-sizing: inherit; }
 
+@font-face {
+  font-family: myFirstFont;
+  src: url('fonts/SourceSansPro-Regular.otf');
+}
+
 /*
 BARVY
 czechitas                 #b92e81
@@ -17,5 +22,142 @@ tlačítko twitter          #1da1f2
 
 body {
   background-color: #bdc3c7;
+  margin: 20px;
 }
 
+
+.foto{
+display: inline-block;
+width: 100%;
+margin: 0px;
+}
+
+.hlavicka{
+  display: inline-block;
+ position: relative;
+  margin: 0;
+}
+
+.logo{
+display: inline-block;
+position: absolute;
+width: 50px;
+bottom: -10%;
+left: 70%;
+background-color: #b92e81;
+border-radius: 50%;
+margin: 0;
+}
+
+.obsah{
+display: inline-block;
+width:  100%;
+background-color: #31363b;
+padding: 20px;
+margin: 0;
+}
+
+h1{
+  color: white;
+  margin: 0;
+}
+
+p{
+  color: white;
+  font-family: myFirstFont;
+}
+
+.jmeno{
+  display: inline-block;
+  font-family: "Montserrat", sans-serif;
+ font-size: 24px;  
+ margin: 0;
+
+ }
+ .odkazy{
+  position: relative;
+  width: 100%;
+  height: 80px;
+background-color: #31363b;
+margin: 0;
+ }
+ 
+ .portfolio{
+position: absolute;
+display: inline-block;
+list-style: none;
+width: 100%;
+height: 50%;
+top: 0;
+right: 0;
+text-align: center;
+border: 0.5px dotted #3f464d;
+font-family: "Montserrat", sans-serif;
+line-height: 40px;
+
+}
+
+.portfolio, 
+.facebook, 
+.twitter, a{
+  display: inline-block;
+color: white;
+  text-decoration: none;
+
+}
+
+.portfolio :hover {
+  background-color: #e74c3c;
+  width: 100%;
+height: 100%;
+}
+
+.facebook :hover {
+  background-color: #3b5998;
+  width: 100%;
+height: 100%;
+
+}
+
+.facebook{
+  position: absolute;
+  display: inline-block;
+  list-style: none;
+  width: 50%;
+  height: 50%;
+  bottom: 0%;
+  right: 50%;
+  text-align: center;
+  line-height: 40px;
+font-family: "Montserrat", sans-serif;
+border: 0.5px dotted #3f464d;
+}
+
+  .twitter :hover {
+    background-color: #1da1f2;
+    width: 100%;
+  height: 100%; 
+  }
+
+
+  .twitter {
+    position: absolute;
+    display: inline-block;
+    list-style: none;
+    width: 50%;
+    height: 50%;
+    top: 50%;
+   left: 50%;
+    text-align: center;
+    line-height: 40px;
+font-family: "Montserrat", sans-serif;
+border: 0.5px dotted #3f464d;
+}
+
+.profil{
+  width: 30%;
+  box-shadow: #3f464d 5px 5px 10px;
+  padding: 0;
+  margin: 0;
+
+}
